[metadata]
name = faas
version = 0.0.1
author = Alexandra Institute
author_email = fresco@alexandra.dk
description = Privacy-preserving statistics
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/alexandrainst/fresco-stat
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
install_requires =
    zmq
    protobuf
include_package_data = False